--- a/Zadanie2.ipynb
+++ b/Zadanie2.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/miloszp2223/ZadanieML/blob/master/Zadanie2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "source": [
@@ -26,7 +37,7 @@
         "id": "CpLxHALInNqC",
         "outputId": "96a9edc3-01b8-480b-ff9f-9b9193a85ea7"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -68,7 +79,7 @@
         "id": "GViONqc44AXF",
         "collapsed": true
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -190,7 +201,7 @@
         "id": "eu7XNLiwms6P",
         "outputId": "829d268b-28fd-4055-fc04-16110a9794ac"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -246,7 +257,7 @@
         "id": "ObfAmLqv0Xwg",
         "outputId": "09cb5225-7a1e-4c7e-801c-8d22fdbb8517"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -352,7 +363,7 @@
         "id": "7kn7avJY5f0V",
         "collapsed": true
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -546,7 +557,7 @@
       "metadata": {
         "id": "nTuGRY9bzPIV"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -600,7 +611,7 @@
         "id": "ytwvzlO4w9y_",
         "outputId": "3a983796-e779-4193-b543-19f9fbb4c360"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -741,7 +752,7 @@
         "id": "7hnpIn8Z3wuN",
         "outputId": "5d525482-d113-470b-c8b1-d5ea8d9a27d0"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -784,7 +795,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "metadata": {
         "id": "BxzlpktBkDco"
       },
@@ -955,7 +966,7 @@
       "metadata": {
         "id": "MJ3ALSMqB9qx"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -989,7 +1000,7 @@
         "id": "Kx6lKkehbInm",
         "outputId": "8e41ad52-118a-4b80-c651-27283958c7fa"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
